language/move-prover/tests/sources/functional/specs_in_fun_ref.exp
Move prover returns: exiting with boogie verification errors
error: unknown assertion failed

    ┌── tests/sources/functional/specs_in_fun_ref.move:74:13 ───
    │
 74 │             assert x == n;
    │             ^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/specs_in_fun_ref.move:80
    =     at tests/sources/functional/specs_in_fun_ref.move:63: simple5
    =         n = <redacted>
    =     at tests/sources/functional/specs_in_fun_ref.move:64: simple5
    =         x = <redacted>
    =     at tests/sources/functional/specs_in_fun_ref.move:67: simple5
    =     at tests/sources/functional/specs_in_fun_ref.move:68: simple5
    =     at tests/sources/functional/specs_in_fun_ref.move:70: simple5
    =     at tests/sources/functional/specs_in_fun_ref.move:74: simple5

error: unknown assertion failed

    ┌── tests/sources/functional/specs_in_fun_ref.move:96:13 ───
    │
 96 │             assert x == n;
    │             ^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/specs_in_fun_ref.move:102
    =     at tests/sources/functional/specs_in_fun_ref.move:84: simple6
    =         n = <redacted>
    =     at tests/sources/functional/specs_in_fun_ref.move:85: simple6
    =         x = <redacted>
    =     at tests/sources/functional/specs_in_fun_ref.move:88: simple6
    =     at tests/sources/functional/specs_in_fun_ref.move:89: simple6
    =     at tests/sources/functional/specs_in_fun_ref.move:91: simple6
    =     at tests/sources/functional/specs_in_fun_ref.move:87: simple6
    =     at tests/sources/functional/specs_in_fun_ref.move:96: simple6
